[ENTESB-15247] Final refinements of JDK11 configuration